--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wp-plugin-suggestions-js",
+	"name": "wp-plugin-suggestions",
 	"version": "1.0.0",
 	"description": "suggestions for plugins by quadlayers",
 	"main": "./build/index.js",
@@ -23,7 +23,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/franmastromarino/wp-plugin-suggestions-js.git"
+		"url": "git+https://github.com/franmastromarino/wp-plugin-suggestions.git"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.8",
