--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wp-plugin-suggestions",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "suggestions for plugins by quadlayers",
 	"main": "./build/index.js",
 	"author": "Quadlayers",
@@ -29,11 +29,15 @@
 		"@babel/core": "^7.21.8",
 		"@babel/preset-env": "^7.21.5",
 		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.21.5",
+		"@types/react": "^18.2.6",
+		"@types/react-dom": "^18.2.4",
 		"@wordpress/scripts": "26.3.0",
 		"babel-loader": "^9.1.2",
 		"classnames": "2.3.2",
 		"css-loader": "6.7.3",
 		"lint-staged": "13.2.0",
+		"typescript": "^5.0.4",
 		"webpack-cli": "^5.0.2",
 		"webpack-dev-server": "^4.13.3"
 	},
