--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "wp-plugin-suggestions",
-	"version": "1.0.2",
+	"version": "1.1.0",
 	"description": "suggestions for plugins by quadlayers",
-	"main": "./build/index.js",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"author": "Quadlayers",
 	"license": "ISC",
 	"scripts": {
 		"pack": "npm run build && npm pack",
-		"build": "wp-scripts build",
-		"start": "wp-scripts start",
+		"build": "tsc --outDir dist/",
+		"start": "tsc --outDir dist/ --watch",
 		"format": "wp-scripts format",
 		"lint": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
@@ -32,6 +33,7 @@
 		"@babel/preset-typescript": "^7.21.5",
 		"@types/react": "^18.2.6",
 		"@types/react-dom": "^18.2.4",
+		"@types/styled-components": "^5.1.26",
 		"@wordpress/scripts": "26.3.0",
 		"babel-loader": "^9.1.2",
 		"classnames": "2.3.2",
